# virtual_texturing

./: .gitmodules  CMakeLists.txt
include/: glm_hash.h  shader.h  texture_manager.h  virtual_texture.h
shaders/: fragment.glsl
src/: main.cpp  shader.cpp  texture_manager.cpp  virtual_texture.cpp
